[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Cameron Dershem <cameron@pinkhatbeard.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.19"
anyhow = "1.0.52"
argon2 = { version = "0.3", features = ["std"] }
base64 = "0.13.0"
config = "0.11"
chrono = "0.4.15"
htmlescape = "0.3"
rand = { version = "0.8", features=["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.115"
serde-aux = "3"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "0.5.0-beta.9"
unicode-segmentation = "1.7.1"
urlencoding = "2"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"

[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
linkify = "0.8.0"
once_cell = "1.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde_json = "1"
wiremock = "0.5.10"
